--- a/gb/17/6/28/n9328162.md
+++ b/gb/17/6/28/n9328162.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ghguyw2714/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ghguyw2714/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ghguyw2714/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ghguyw2714/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ghguyw2714/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ghguyw2714/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ghguyw2714/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>想移民澳洲？官方公布新技术移民职业清单</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/06/australia-2122938_1920-600x400.jpg" />
 <h6>2017年7月1日起，政府将开始接收ICT相关职业的维州担保申请。（Pixabay）
 </h6>
 <hr>
-<p>【大纪元2017年06月28日讯】（大纪元记者宋清宁<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>墨尔本编译报导）<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>政府周一（26日）更新了技术<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>职业清单（Visa Nomination Occupation List），宣布从7月1日起，维州技术和商业移民计划（Victorian Skilled and Business Migration Program）将重新接收信息与通信技术（Information and Communications Technology，以下简称为ICT）类别的<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%8A%80%E6%9C%AF%E7%A7%BB%E6%B0%91.md#1">技术移民</a>申请。</p>
-<p>据<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>民族电视台（SBS）报导，2016年11月，<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>政府决定暂停接收ICT类别下11个职业的技术<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>申请，直至2017年3月6日，之后又延至2017年6月30日。7月1日起，政府将开始接收ICT相关职业的维州担保申请。</p>
+<p>【大纪元2017年06月28日讯】（大纪元记者宋清宁<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>墨尔本编译报导）<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>政府周一（26日）更新了技术<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>职业清单（Visa Nomination Occupation List），宣布从7月1日起，维州技术和商业移民计划（Victorian Skilled and Business Migration Program）将重新接收信息与通信技术（Information and Communications Technology，以下简称为ICT）类别的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8A%80%E6%9C%AF%E7%A7%BB%E6%B0%91.md#1">技术移民</a>申请。</p>
+<p>据<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>民族电视台（SBS）报导，2016年11月，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>政府决定暂停接收ICT类别下11个职业的技术<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>申请，直至2017年3月6日，之后又延至2017年6月30日。7月1日起，政府将开始接收ICT相关职业的维州担保申请。</p>
 <h2>这些职业为：</h2>
 <p>1 ICT项目经理，135112，ICT Project Manager；</p>
 <p>2 ICT业务分析师，261111，ICT Business Analyst；</p>
@@ -20,10 +20,10 @@
 <p>9 数据库管理员，262111，Database Administrator；</p>
 <p>10 信息安全专家，262112，ICT Security Specialist；</p>
 <p>11 计算机网络与系统工程师，263111，Computer Network and Systems Engineer。</p>
-<h2>ICT相关职业<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%8A%80%E6%9C%AF%E7%A7%BB%E6%B0%91.md#1">技术移民</a>申请新流程</h2>
+<h2>ICT相关职业<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8A%80%E6%9C%AF%E7%A7%BB%E6%B0%91.md#1">技术移民</a>申请新流程</h2>
 <p>由于维州政府收到大量的ICT相关职业技术移民签证申请，决定更改申请流程，旨在缩短审理时间。</p>
-<p>有兴趣申请ICT相关职业维州<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C%E6%8B%85%E4%BF%9D.md#1">政府担保</a>的朋友，请参考以下步骤：</p>
-<p>1 检查您是否符合澳洲移民和边境保护部（DIBP）的“<ahref="https://github.com/ghguyw2714/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C%E6%8B%85%E4%BF%9D.md#1">政府担保</a>技术移民签证（类别190）要求”（点击<ahref="http://www.border.gov.au/Trav/Visa-1/190-">这里</a>查看）和“维州担保最低资格要求”（点击<ahref="http://www.liveinvictoria.vic.gov.au/visas-and-immigrating/skilled-visas/skilled-nominated-visa-subclass-190?utm_medium=email&amp;utm_campaign=Migration%20Agent%20Alert%20-%20June%202017&amp;utm_content=Migration%20Agent%20Alert%20-%20June%202017+CID_251e0af62f4a3b94ecbdf03a909c7f27&amp;utm_source=email&amp;utm_term=Victorias%20minimum%20nomination%20requirements#MinimumRequirements">这里</a>查看）。</p>
+<p>有兴趣申请ICT相关职业维州<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C%E6%8B%85%E4%BF%9D.md#1">政府担保</a>的朋友，请参考以下步骤：</p>
+<p>1 检查您是否符合澳洲移民和边境保护部（DIBP）的“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C%E6%8B%85%E4%BF%9D.md#1">政府担保</a>技术移民签证（类别190）要求”（点击<ahref="http://www.border.gov.au/Trav/Visa-1/190-">这里</a>查看）和“维州担保最低资格要求”（点击<ahref="http://www.liveinvictoria.vic.gov.au/visas-and-immigrating/skilled-visas/skilled-nominated-visa-subclass-190?utm_medium=email&amp;utm_campaign=Migration%20Agent%20Alert%20-%20June%202017&amp;utm_content=Migration%20Agent%20Alert%20-%20June%202017+CID_251e0af62f4a3b94ecbdf03a909c7f27&amp;utm_source=email&amp;utm_term=Victorias%20minimum%20nomination%20requirements#MinimumRequirements">这里</a>查看）。</p>
 <p>2 到DIBP网站SkillSelect服务系统（点击<ahref="http://www.border.gov.au/Trav/Work/Skil">这里</a>进入）提交技术移民（类别190）意向书（EOI），表明申请维州政府担保的意愿。</p>
 <p>3 经常检查您的邮件（包括垃圾邮件），查看是否被维州选中。在提交EOI意向书后，收到政府邀请函的等待时间没有限定。政府不能保证人人都能收到邀请函。如果被选中，一份电子邀请函会发送到您用来提交意向书的邮箱中。</p>
 <p>4 在收到邀请函后的14天内，在网上提交维州签证担保申请。注意，您必须能证明自己仍符合在意向书中提到的各种条件。建议大家在提交意向书前就准备好所有的相关文件，因为14天的期限是不能延长的。</p>
@@ -741,42 +741,47 @@ Writing: 7.0</td>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/4/5/n9002348.md#1">澳洲移民品行测试严格中有温情 维州母亲暂不遣返</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/4/21/n9060030.md#1">墨尔本不再宜居 是黑人难民的错吗？</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/5/1/n9092797.md#1">澳洲三分之二富豪移民落户维州</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/6/15/n9268351.md#1">澳洲2/3近期移民和临时居民找到了工作</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/6/16/n9272560.md#1">专家：移民在抢澳洲人饭碗 影响可持续发展</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/6/19/n9281190.md#1">移民挤在墨尔本负担重 维州反对党吁疏散城市人口</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/6/27/n9325064.md#1">澳洲人口普查：华人增长快 墨尔本将赶超悉尼</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/7/n11922895.md#1">中共肺炎：维州或实施第三级限制令 取消择期手术</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/25/n11971891.md#1">中共肺炎重创墨尔本小商家 多家公司命悬一线</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/25/n11971745.md#1">维州解除陆上天然气开采禁令 或助气费降低</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/4/5/n9002348.md#1">澳洲移民品行测试严格中有温情 维州母亲暂不遣返</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/4/21/n9060030.md#1">墨尔本不再宜居 是黑人难民的错吗？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/1/n9092797.md#1">澳洲三分之二富豪移民落户维州</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/15/n9268351.md#1">澳洲2/3近期移民和临时居民找到了工作</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/16/n9272560.md#1">专家：移民在抢澳洲人饭碗 影响可持续发展</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/19/n9281190.md#1">移民挤在墨尔本负担重 维州反对党吁疏散城市人口</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/27/n9325064.md#1">澳洲人口普查：华人增长快 墨尔本将赶超悉尼</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741352.md#1">Woolworths将以2.43亿收购在线平台MyDeal</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741323.md#1">7月起 澳洲小型家庭电费一年或增近200元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741321.md#1">上海封城导致造影剂短缺 澳部分手术被迫推迟</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/22/n10801600.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（2）</a></li><li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9812644.md#1" target="_blank">游兆和：从“十月革命”看共产革命本质</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11965551.md#1">分析：大疫之下中国两千万手机用户消失</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11968139.md#1">马列教授千里散毒？意首例确诊病例身份曝光</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/24/n11970524.md#1">台湾目前有4万多居家检疫者 双北市占近半数</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/23/n11966380.md#1">辛龙丧妻撕心裂肺 将在追思会分享心路历程</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
-<li><a href="https://github.com/ghguyw2714/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ghguyw2714/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ghguyw2714/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/28/n9328162.htm">想移民澳洲？官方公布新技术移民职业清单</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/28/n9328162.htm">想移民澳洲？官方公布新技术移民职业清单</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ghguyw2714/djy/blob/master/gb/17/6/28/n9328162.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ghguyw2714/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ghguyw2714/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ghguyw2714/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ghguyw2714/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ghguyw2714/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/17/6/28/n9328162.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
